表紙画像の制作
表紙画像を作りました

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css"
 </head>
+
 <body>
-    
+    <img src="hyousi_gazou.jpg"
+
 </body>
 </html>
