ロゴの追加

--- a/iniad.html
+++ b/iniad.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INIAD</title>
+    <link rel="stylesheet" href="css/iniad.css"
 </head>
 <body>
-    
+    <h1><img id="rogo"
+        src="https://gyazo.com/fda1c3cedfec2f0643c4eafa1ef2f33d/max_size/400">
+    </h1>
+        
 </body>
 </html>
