サイト進展

--- a/helspo.html
+++ b/helspo.html
@@ -4,12 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>helspo_school cafeteria</title>
+    <link rel="stylesheet" href="css/helspo.css">
 </head>
 
 <body>
     <h1>HELSPOの学食</h1>
     <h3>東洋大学健康スポーツ科学部(通称HELSPO)にある学食(HELSPO KITCHEN)について紹介します！</h3>
-    <img sre="helspo.jpg">
-</body>
+
+    <p class="helspoimage">
+        <img src="helspo.jpg" alt=""HELSPOの校舎>
+    </p>
+    <h2>目次</h2>
+    <ol>
+        <li>学食について・アクセス</li>
+        <li>店内の様子</li>
+        <li>メニュー</li>
+        <li>おすすめメニュー</li>
+    </ol>
+    <h1>HELSPO KITCHENとは</h1>
+    <p>HELSPO KITCHENは年4月に開設された東洋大学赤羽台キャンパスHELSPO HUB-3内にある食堂です。</p>
+    <ul>
+        <li>
+            <a href="https://www.toyo.ac.jp/about/introducing/access/">(東洋大学のサイトへリンク)HELSPO HUB-3へのアクセス</a></li>
+        <li>googleマップはこちら</li>
+    </ul>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3236.87007152929!2d139.71462218864875!3d35.7785678241767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x601893af5d772e0b%3A0x8327222f776d5a8f!2z5p2x5rSL5aSn5a2m44Op44Kk44OV44OH44K244Kk44Oz5a2m6YOoKFdFTExCIEhVQi0yKQ!5e0!3m2!1sja!2sjp!4v1719557110547!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <p>住所は、東京都北区赤羽台1丁目7−11 です。</p>
+    <p>(HELSPO HUB-3は2023年に設立した新しい校舎のため、googleマップ上には反映されていませんでした。代わりにHELSPO HUB-3の隣に位置しているWELLB HUB-2のアクセス情報を記載します。)</p>
+    
+    
+    <h1>店内の様子</h1>
+    <p>HELSPO KITCHENの様子</p>
+    <p class="kitchenimage">
+        <img src="img_7864.jpg" alt=""HELSPO KITCHEN>
+    </p>
+
 </body>
 </html>
