--- a/wellB.html
+++ b/wellB.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wellB</title>
+    <title>WELLB</title>
 </head>
 <body>
-    <h1>WellBの学食</h1>
+    <h2>WELLBの学食紹介</h2>
+    <ul>
+        <li>公式ホームページは<a
+        href="https://sites.google.com/toyo.jp/student-support/support/cafeteria/akabanedai-WELLB">こちら</a></li>
+        <li><a
+        href="https://www.google.co.jp/maps/place/%E6%9D%B1%E6%B4%8B%E5%A4%A7%E5%AD%A6%E3%83%A9%E3%82%A4%E3%83%95%E3%83%87%E3%82%B6%E3%82%A4%E3%83%B3%E5%AD%A6%E9%83%A8(WELLB+HUB-2)/@35.7797358,139.7158967,19z/data=!4m6!3m5!1s0x601893af5d772e0b:0x8327222f776d5a8f!8m2!3d35.7797356!4d139.7162574!16s%2Fg%2F11r7gqs5_3?hl=ja&entry=ttu">WELLBへの経路(Google map)</a></li>
+        <li>営業時間　11:00~14:00</li>
+        <li>食券の購入方法　現金 or 交通系IC(SuicaやPASMOなど)</li>
+        <li>ライフデザイン学部と情報連携学部が利用可能</li>
+    </ul>
+    <img src="C:\Users\iniad\Documents\IMG_2105.jpeg" alt="大葉とゆかりのつくね">
+    <p>大葉のさわやかさと、ゆかりの和風っぽさがマッチ！しかもヘルシー！私一押しのメニューです</p>
 
-    
+    <img src="" alt="鳥天丼"
+    <p>鶏肉とタレ</p>
+
     
 </body>
 </html>
