いろいろやりました

--- a/helspo.html
+++ b/helspo.html
@@ -12,7 +12,7 @@
     <h3>東洋大学健康スポーツ科学部(通称HELSPO)にある学食(HELSPO KITCHEN)について紹介します！</h3>
 
     <p class="helspoimage">
-        <img src="helspo.jpg" alt=""HELSPOの校舎>
+        <img src="helspo.jpg" alt="HELSPOの校舎">
     </p>
     <h2>目次</h2>
     <ol>
@@ -38,6 +38,7 @@
     <p class="kitchenimage">
         <img src="img_7864.jpg" alt=""HELSPO KITCHEN>
     </p>
+    
 
 </body>
 </html>
