--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
 </head>
 
 <body>
-    <img src="hyousi_gazou.jpg">
+
+    <div class="sidebar">
+        <h2>学部</h2>
+        <a href="http://127.0.0.1:3000/index.html">Home</a><br />
+        <a href="http://127.0.0.1:3000/iniad.html">INIAD</a><br />
+        <a href="http://127.0.0.1:3000/wellB.html">WELLB</a><br />
+        <a href="http://127.0.0.1:3000/helspo.html">HELSPO</a> <br />
+        <div class="winget widget--sticky"></div>
+    </div>
+
+    <p class="hyoushigazo">
+        <img src="hyousi_gazou.jpg" alt="表紙の画像">
+    </p>
 
 </body>
 </html>
